add request listed on admin side also session is handled

--- a/backend/.env
+++ b/backend/.env
@@ -6,4 +6,6 @@
   database =interviewasservice
   password=  1234
   JWT_SECRET= 'Secrete'
-  OPEN_API_KEY=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
+  OPEN_API_KEY=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
+  EMAIL=interviewxperts@gmail.com
+ EMAIL_PASSWORD=kqjrugcmdzttvyhs
