--- a/backend/package.json
+++ b/backend/package.json
@@ -22,12 +22,14 @@
     "@types/multer": "^1.4.7",
     "@types/node": "^20.1.2",
     "@types/node-fetch": "^2.6.4",
+    "@types/nodemailer": "^6.4.8",
     "@types/uuid": "^9.0.1",
     "node-fetch": "^3.3.1",
     "ts-node": "^10.9.1",
     "typescript": "^5.0.4"
   },
   "dependencies": {
+    "@mui/material": "^5.13.3",
     "axios": "^1.4.0",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.2",
@@ -42,6 +44,7 @@
     "jsonwebtoken": "^9.0.0",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
+    "nodemailer": "^6.9.3",
     "nodemon": "^2.0.22",
     "openai": "^3.2.1",
     "pdfjs-dist": "^3.6.172",
