--- a/frontend/.env
+++ b/frontend/.env
@@ -1,3 +1,11 @@
 
 
 VITE_BASE_URL=http://localhost:5000/api
+
+VITE_FIREBASE_API_KEY=AIzaSyCILk7otx4LwLob-9PyCeS-yUGlCJTw2LE
+VITE_FIREBASE_AUTH_DOMAIN=interview-as-service.firebaseapp.com
+VITE_FIREBASE_PROJECT_ID=interview-as-service
+VITE_FIREBASE_STORAGE_BUCKET=interview-as-service.appspot.com
+VITE_FIREBASE_MESSAGING_SENDER_ID=413190968732
+VITE_FIREBASE_APP_ID=1:413190968732:web:4ef7170f3cf83eefc5a459
+VITE_FIREBASE_MEASUREMENT_ID=G-YC7NVP5LBZ
