--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,11 +17,15 @@
     "@reduxjs/toolkit": "^1.9.5",
     "axios": "^1.4.0",
     "dotenv": "^16.0.3",
+    "firebase": "^9.22.1",
     "formik": "^2.2.9",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-firebaseui": "^6.0.0",
+    "react-hot-toast": "^2.4.1",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.11.1",
+    "react-toastify": "^9.1.3",
     "redux": "^4.2.1",
     "yup": "^1.1.1"
   },
