--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,12 +10,15 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@100mslive/react-sdk": "^0.8.6",
     "@emotion/react": "^11.11.0",
     "@emotion/styled": "^11.11.0",
+    "@material-ui/core": "^4.12.4",
     "@mui/icons-material": "^5.11.16",
     "@mui/material": "^5.13.0",
     "@paypal/react-paypal-js": "^7.8.3",
     "@reduxjs/toolkit": "^1.9.5",
+    "@zegocloud/zego-uikit-prebuilt": "^1.8.4",
     "axios": "^1.4.0",
     "dotenv": "^16.0.3",
     "firebase": "^9.22.1",
@@ -30,6 +33,7 @@
     "react-router-dom": "^6.11.1",
     "react-toastify": "^9.1.3",
     "redux": "^4.2.1",
+    "styled-components": "6.0.0-rc.3",
     "yup": "^1.1.1"
   },
   "devDependencies": {
