--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "@emotion/react": "^11.11.0",
     "@emotion/styled": "^11.11.0",
     "@material-ui/core": "^4.12.4",
+    "@material-ui/icons": "^4.11.3",
     "@mui/icons-material": "^5.11.16",
     "@mui/material": "^5.13.0",
     "@paypal/react-paypal-js": "^7.8.3",
@@ -32,6 +33,7 @@
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.11.1",
     "react-toastify": "^9.1.3",
+    "recharts": "^2.7.1",
     "redux": "^4.2.1",
     "styled-components": "6.0.0-rc.3",
     "yup": "^1.1.1"
