--- a/backend/package.json
+++ b/backend/package.json
@@ -52,6 +52,7 @@
     "pdfjs-dist": "^3.6.172",
     "pg": "^8.11.0",
     "sequelize": "^6.31.1",
+    "socket.io": "^4.7.0",
     "uuid": "^9.0.0"
   },
   "description": ""
