--- a/frontend/package.json
+++ b/frontend/package.json
@@ -30,11 +30,14 @@
     "react-error-boundary": "^4.0.9",
     "react-firebaseui": "^6.0.0",
     "react-hot-toast": "^2.4.1",
+    "react-lazyload": "^3.2.0",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.11.1",
+    "react-spinners": "^0.13.8",
     "react-toastify": "^9.1.3",
     "recharts": "^2.7.1",
     "redux": "^4.2.1",
+    "socket.io-client": "^4.7.0",
     "styled-components": "6.0.0-rc.3",
     "yup": "^1.1.1"
   },
