--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,17 +20,21 @@
     "@paypal/react-paypal-js": "^7.8.3",
     "@reduxjs/toolkit": "^1.9.5",
     "@zegocloud/zego-uikit-prebuilt": "^1.8.4",
+    "add": "^2.0.6",
     "axios": "^1.4.0",
     "dotenv": "^16.0.3",
     "firebase": "^9.22.1",
     "formik": "^2.2.9",
     "react": "^18.2.0",
+    "react-date-picker": "^10.2.0",
     "react-datepicker": "^4.12.0",
     "react-dom": "^18.2.0",
     "react-error-boundary": "^4.0.9",
     "react-firebaseui": "^6.0.0",
     "react-hot-toast": "^2.4.1",
+    "react-input-emoji": "^5.1.1",
     "react-lazyload": "^3.2.0",
+    "react-month-picker": "^2.2.1",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.11.1",
     "react-spinners": "^0.13.8",
@@ -39,6 +43,7 @@
     "redux": "^4.2.1",
     "socket.io-client": "^4.7.0",
     "styled-components": "6.0.0-rc.3",
+    "timeago.js": "^4.0.2",
     "yup": "^1.1.1"
   },
   "devDependencies": {
