--- a/frontend/package.json
+++ b/frontend/package.json
@@ -25,6 +25,7 @@
     "dotenv": "^16.0.3",
     "firebase": "^9.22.1",
     "formik": "^2.2.9",
+    "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-date-picker": "^10.2.0",
     "react-datepicker": "^4.12.0",
