--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,14 +18,18 @@
     "@mui/icons-material": "^5.11.16",
     "@mui/material": "^5.13.0",
     "@paypal/react-paypal-js": "^7.8.3",
+    "@progress/kendo-react-pdf": "^5.14.1",
+    "@react-pdf/renderer": "^3.1.12",
     "@reduxjs/toolkit": "^1.9.5",
     "@zegocloud/zego-uikit-prebuilt": "^1.8.4",
     "add": "^2.0.6",
     "axios": "^1.4.0",
     "dotenv": "^16.0.3",
+    "file-saver": "^2.0.5",
     "firebase": "^9.22.1",
     "formik": "^2.2.9",
     "moment": "^2.29.4",
+    "puppeteer": "^20.7.4",
     "react": "^18.2.0",
     "react-date-picker": "^10.2.0",
     "react-datepicker": "^4.12.0",
@@ -51,6 +55,7 @@
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
     "@vitejs/plugin-react": "^4.0.0",
+    "blob": "^0.1.0",
     "eslint": "^8.38.0",
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
